--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,10 @@
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
-    <div class="container-fluid bg-white sticky-top">
+    <div
+      class="container-fluid bg-white sticky-top"
+      style="height: 110px; top: 150px"
+    >
       <div class="container">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
           <a href="index.html" class="navbar-brand">
@@ -72,7 +75,8 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div
+            style="height: 105px; width: 80%" class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto">
               <a href="index.html" class="nav-item nav-link">Home</a>
               <a href="about.html" class="nav-item nav-link">About</a>
