--- a/about.html
+++ b/about.html
@@ -54,10 +54,7 @@
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
-    <div
-      class="container-fluid bg-white sticky-top"
-      style="height: 110px; top: 150px"
-    >
+    <div class="container-fluid bg-white sticky-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
           <a href="index.html" class="navbar-brand">
@@ -75,8 +72,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div
-            style="height: 105px; width: 80%" class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto">
               <a href="index.html" class="nav-item nav-link">Home</a>
               <a href="about.html" class="nav-item nav-link active">About</a>
@@ -137,28 +133,28 @@
                 <img
                   class="img-fluid bg-white w-100 mb-3 wow fadeIn"
                   data-wow-delay="0.1s"
-                  src="Poultry/download (1).jpg"
-                  alt="Banner Image"
+                  src="Poultry/download (1) (1).jpg"
+                  alt=""
                 />
                 <img
                   class="img-fluid bg-white w-50 wow fadeIn"
                   data-wow-delay="0.2s"
-                  src="Poultry/download (2).jpg"
-                  alt="Image"
+                  src="Poultry/gizzard.jpg"
+                  alt=""
                 />
               </div>
               <div class="col-6">
                 <img
                   class="img-fluid bg-white w-50 mb-3 wow fadeIn"
                   data-wow-delay="0.3s"
-                  src="Poultry/gizzard.jpg"
-                  alt="Gizzard Image"
+                  src="Poultry/download (2).jpg"
+                  alt=""
                 />
                 <img
                   class="img-fluid bg-white w-100 wow fadeIn"
                   data-wow-delay="0.4s"
-                  src="Poultry/flyer sample 1.jpg"
-                  alt="flyer"
+                  src="Poultry/eggs2.jpg"
+                  alt=""
                 />
               </div>
             </div>
@@ -172,8 +168,8 @@
               <div class="col-sm-4">
                 <img
                   class="img-fluid bg-white w-100"
-                  src="Poultry/Layers.jpg"
-                  alt=""
+                  src="Poultry/layer-hen-space.jpg"
+                  alt="chicken picture"
                 />
               </div>
               <div class="col-sm-8">
@@ -215,7 +211,7 @@
     >
       <div class="container py-5">
         <div class="row g-5">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-5 col-md-6">
             <h4 class="text-primary mb-4">Our Office</h4>
             <p class="mb-2">
               <i class="fa fa-map-marker-alt text-primary me-3"></i>PE B14/3,
