--- a/blog.html
+++ b/blog.html
@@ -54,10 +54,7 @@
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
-   <div
-      class="container-fluid bg-white sticky-top"
-      style="height: 110px; top: 150px"
-    >
+    <div class="container-fluid bg-white sticky-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
           <a href="index.html" class="navbar-brand">
@@ -75,8 +72,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div
-            style="height: 105px; width: 80%" class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto">
               <a href="index.html" class="nav-item nav-link">Home</a>
               <a href="about.html" class="nav-item nav-link">About</a>
@@ -142,21 +138,63 @@
               <p class="fs-5 fw-medium fst-italic text-primary">
                 Featured Acticle
               </p>
-              <h1 class="display-6">The Old Layer Chicken</h1>
+              <h1 class="display-6">
+                The Truth About Old Laying Hens: Are They Really Healthier?
+              </h1>
             </div>
             <p class="mb-4">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-              diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-              lorem sit clita duo justo magna dolore erat amet
+              There's a common perception that older laying hens (sometimes
+              called "spent hens" or "soup hens") are healthier than their
+              younger counterparts.
             </p>
             <p class="mb-4">
-              Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
-              ipsum et lorem et sit, sed stet lorem sit clita duo justo magna.
-              Tempor erat elitr rebum at clita.
+              Here's a breakdown of the nutritional value and potential benefits
+              of old layer hens:
             </p>
-            <a href="" class="btn btn-primary rounded-pill py-3 px-5"
-              >Read More</a
-            >
+
+            <p>
+              
+            </div>
+              <div class="section-title">
+              <li>Similar Nutrition:</li>
+              In terms of pure nutritional content (protein, fat, vitamins,
+              minerals), there's no significant difference between meat from
+              young and old laying hens. Both are good sources of lean protein,
+              essential fatty acids, and micronutrients. <br />Potential
+              Benefits:
+              <li>Flavor:</li>
+              Some people claim older hens have a richer, more "gamey" flavor
+              due to increased muscle development. This can be desirable for
+              certain recipes.
+              <li>Toughness:</li>
+              Older hens can be tougher due to more developed muscles. However,
+              proper cooking methods like slow braising or stewing can make the
+              meat tender and flavorful. Cost: Old laying hens are often sold at
+              a discounted price because they lay fewer eggs. This can be an
+              economical way to get chicken meat. <br />Things to Consider:
+              <li>Health:</li>
+              While older hens might not be unhealthy themselves, they may have
+              been exposed to more antibiotics or medications during their
+              egg-laying years. Look for farms that raise their hens with
+              responsible practices and minimal use of antibiotics.
+              <li>Preparation:</li>
+              The tougher meat of older hens requires different cooking
+              techniques compared to younger birds. Overall: There's no
+              definitive answer to whether old layer hens are "healthier." They
+              offer similar nutritional value but may have a different flavor
+              and texture. If you're looking for a budget-friendly option and
+              enjoy richer flavors, older hens could be a good choice. Just
+              ensure they come from a reputable source and cook them
+              appropriately. <br />Here are some additional points to keep in
+              mind: Freshness: Regardless of age, freshness is key! Opt for hens
+              that have been properly stored and handled. Local farms:
+              Supporting local farms that raise their hens humanely can be a
+              good option.
+              <li>Alternatives:</li>
+              If you're concerned about antibiotics or prefer a milder flavor,
+              consider buying chicken from farms that raise broiler chickens
+              specifically for meat.
+            </p>
           </div>
         </div>
       </div>
@@ -170,7 +208,7 @@
     >
       <div class="container py-5">
         <div class="row g-5">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-5 col-md-6">
             <h4 class="text-primary mb-4">Our Office</h4>
             <p class="mb-2">
               <i class="fa fa-map-marker-alt text-primary me-3"></i>PE B14/3,
