--- a/contact.html
+++ b/contact.html
@@ -54,10 +54,7 @@
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
-    <div
-      class="container-fluid bg-white sticky-top"
-      style="height: 110px; top: 150px"
-    >
+    <div class="container-fluid bg-white sticky-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
           <a href="index.html" class="navbar-brand">
@@ -75,8 +72,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div
-            style="height: 105px; width: 80%" class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto">
               <a href="index.html" class="nav-item nav-link">Home</a>
               <a href="about.html" class="nav-item nav-link">About</a>
@@ -168,7 +164,7 @@
         </div>
         <div class="row g-5">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <h3 class="mb-4">Are you in need of ant help?</h3>
+            <h3 class="mb-4">Are you in need of any help?</h3>
             <p class="mb-4">
               For any additional info our purchase contact us and lets take it
               from there
@@ -255,7 +251,7 @@
     >
       <div class="container py-5">
         <div class="row g-5">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-5 col-md-6">
             <h4 class="text-primary mb-4">Our Office</h4>
             <p class="mb-2">
               <i class="fa fa-map-marker-alt text-primary me-3"></i>PE B14/3,
