--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
-    <div
-      class="container-fluid bg-white sticky-top"
-      style="height: 110px; top: 150px"
-    >
+    <div class="container-fluid bg-white sticky-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
           <a href="index.html" class="navbar-brand">
@@ -75,11 +72,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div
-            style="height: 105px; width: 80%"
-            class="collapse navbar-collapse"
-            id="navbarCollapse"
-          >
+          <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto">
               <a href="index.html" class="nav-item nav-link active">Home</a>
               <a href="about.html" class="nav-item nav-link">About</a>
@@ -135,7 +128,7 @@
                       Quality Chicken
                     </h1>
                     <a
-                      href=""
+                      href="product.html"
                       class="btn btn-light rounded-pill py-3 px-5 animated zoomIn"
                       >Explore More</a
                     >
@@ -220,7 +213,7 @@
                 <img
                   class="img-fluid bg-white w-100 wow fadeIn"
                   data-wow-delay="0.4s"
-                  src="Poultry/flyer sample 1.jpg"
+                  src="Poultry/eggs2.jpg"
                   alt=""
                 />
               </div>
@@ -235,8 +228,8 @@
               <div class="col-sm-4">
                 <img
                   class="img-fluid bg-white w-100"
-                  src="Poultry/Layers.jpg"
-                  alt=""
+                  src="Poultry/layer-hen-space.jpg"
+                  alt="chicken picture"
                 />
               </div>
               <div class="col-sm-8">
@@ -293,8 +286,8 @@
             >
               <h4 class="text-primary">Lived/Dressed Broilers</h4>
               <span class="text-body"
-                >Diam dolor diam ipsum sit diam amet diam et eos. Clita erat
-                ipsum</span
+                >Farm-fresh broilers raised with care, ready to be your next
+                delicious meal.</span
               >
             </div>
           </a>
@@ -305,8 +298,8 @@
             >
               <h4 class="text-primary">Lived/Dressed layers</h4>
               <span class="text-body"
-                >Diam dolor diam ipsum sit diam amet diam et eos. Clita erat
-                ipsum</span
+                >Delicious, flavorful lived and dressed layers perfect for home
+                cooking.</span
               >
             </div>
           </a>
@@ -317,8 +310,8 @@
             >
               <h4 class="text-primary">Chicken Giblets (Parts)</h4>
               <span class="text-body"
-                >Diam dolor diam ipsum sit diam amet diam et eos. Clita erat
-                ipsum</span
+                >Complete your meal with our fresh, flavorful chicken
+                giblets.</span
               >
             </div>
           </a>
@@ -329,8 +322,8 @@
             >
               <h4 class="text-primary">Fresh Eggs</h4>
               <span class="text-body"
-                >Diam dolor diam ipsum sit diam amet diam et eos. Clita erat
-                ipsum</span
+                >Get your hands on the freshest, farm-raised eggs bursting with
+                flavor.</span
               >
             </div>
           </a>
@@ -351,19 +344,20 @@
               <p class="fs-5 fw-medium fst-italic text-primary">
                 Featured Acticle
               </p>
-              <h1 class="display-6">The Old Layer Chicken</h1>
+              <h1 class="display-6">
+                The Truth About Old Laying Hens: Are They Really Healthier?
+              </h1>
             </div>
             <p class="mb-4">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-              diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-              lorem sit clita duo justo magna dolore erat amet
+              There's a common perception that older laying hens (sometimes
+              called "spent hens" or "soup hens") are healthier than their
+              younger counterparts.
             </p>
             <p class="mb-4">
-              Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
-              ipsum et lorem et sit, sed stet lorem sit clita duo justo magna.
-              Tempor erat elitr rebum at clita.
+              Here's a breakdown of the nutritional value and potential benefits
+              of old layer hens:
             </p>
-            <a href="" class="btn btn-primary rounded-pill py-3 px-5"
+            <a href="blog.html" class="btn btn-primary rounded-pill py-3 px-5"
               >Read More</a
             >
           </div>
@@ -397,52 +391,51 @@
         >
           <div class="testimonial-item p-4 p-lg-5">
             <p class="mb-4">
-              Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
-              ipsum et lorem et sit, sed stet lorem sit clita duo justo
+              I was starting to get discouraged by the high price of chicken at
+              the grocery store. Then I discovered AMAS Farm! Their prices are
+              incredibly reasonable, especially considering the quality you get.
             </p>
             <div class="d-flex align-items-center justify-content-center">
               <img
                 class="img-fluid flex-shrink-0"
-                src="img/testimonial-1.jpg"
+                src="Poultry/img2.png"
                 alt=""
               />
               <div class="text-start ms-3">
-                <h5>Client Name</h5>
-                <span class="text-primary">Profession</span>
+                <h5>Afia Konadu</h5>
               </div>
             </div>
           </div>
           <div class="testimonial-item p-4 p-lg-5">
             <p class="mb-4">
-              Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
-              ipsum et lorem et sit, sed stet lorem sit clita duo justo
+              The chickens are just as good, if not better, than what I find at
+              the supermarket. Now I can enjoy delicious, healthy chicken meals
+              without breaking the bank. Thank you!
             </p>
             <div class="d-flex align-items-center justify-content-center">
               <img
                 class="img-fluid flex-shrink-0"
-                src="img/testimonial-2.jpg"
+                src="Poultry/img1.png"
                 alt=""
               />
               <div class="text-start ms-3">
-                <h5>Client Name</h5>
-                <span class="text-primary">Profession</span>
+                <h5>Amoani Frempong</h5>
               </div>
             </div>
           </div>
           <div class="testimonial-item p-4 p-lg-5">
             <p class="mb-4">
-              Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
-              ipsum et lorem et sit, sed stet lorem sit clita duo justo
+              The chicken is always fresh, tender, and full of flavor. It makes
+              a huge difference in my meals.
             </p>
             <div class="d-flex align-items-center justify-content-center">
               <img
                 class="img-fluid flex-shrink-0"
-                src="img/testimonial-3.jpg"
+                src="Poultry/img3.jpg"
                 alt=""
               />
               <div class="text-start ms-3">
-                <h5>Client Name</h5>
-                <span class="text-primary">Profession</span>
+                <h5>Diana Akosua</h5>
               </div>
             </div>
           </div>
@@ -519,7 +512,7 @@
     >
       <div class="container py-5">
         <div class="row g-5">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-5 col-md-6">
             <h4 class="text-primary mb-4">Our Office</h4>
             <p class="mb-2">
               <i class="fa fa-map-marker-alt text-primary me-3"></i>PE B14/3,
