--- a/product.html
+++ b/product.html
@@ -54,10 +54,7 @@
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
-    <div
-      class="container-fluid bg-white sticky-top"
-      style="height: 110px; top: 150px"
-    >
+    <div class="container-fluid bg-white sticky-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
           <a href="index.html" class="navbar-brand">
@@ -75,8 +72,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div
-            style="height: 105px; width: 80%" class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto">
               <a href="index.html" class="nav-item nav-link">Home</a>
               <a href="about.html" class="nav-item nav-link">About</a>
@@ -152,8 +148,8 @@
             >
               <h4 class="text-primary">Lived/Dressed Broilers</h4>
               <span class="text-body"
-                >Diam dolor diam ipsum sit diam amet diam et eos. Clita erat
-                ipsum</span
+                >Farm-fresh broilers raised with care, ready to be your next
+                delicious meal.</span
               >
             </div>
           </a>
@@ -164,8 +160,8 @@
             >
               <h4 class="text-primary">Lived/Dressed layers</h4>
               <span class="text-body"
-                >Diam dolor diam ipsum sit diam amet diam et eos. Clita erat
-                ipsum</span
+                >Delicious, flavorful lived and dressed layers perfect for home
+                cooking.</span
               >
             </div>
           </a>
@@ -176,8 +172,8 @@
             >
               <h4 class="text-primary">Chicken Giblets (Parts)</h4>
               <span class="text-body"
-                >Diam dolor diam ipsum sit diam amet diam et eos. Clita erat
-                ipsum</span
+                >Complete your meal with our fresh, flavorful chicken
+                giblets.</span
               >
             </div>
           </a>
@@ -188,8 +184,8 @@
             >
               <h4 class="text-primary">Fresh Eggs</h4>
               <span class="text-body"
-                >Diam dolor diam ipsum sit diam amet diam et eos. Clita erat
-                ipsum</span
+                >Get your hands on the freshest, farm-raised eggs bursting with
+                flavor.</span
               >
             </div>
           </a>
@@ -205,7 +201,7 @@
     >
       <div class="container py-5">
         <div class="row g-5">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-5 col-md-6">
             <h4 class="text-primary mb-4">Our Office</h4>
             <p class="mb-2">
               <i class="fa fa-map-marker-alt text-primary me-3"></i>PE B14/3,
