--- a/testimonial.html
+++ b/testimonial.html
@@ -54,10 +54,7 @@
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
-    <div
-      class="container-fluid bg-white sticky-top"
-      style="height: 110px; top: 150px"
-    >
+    <div class="container-fluid bg-white sticky-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
           <a href="index.html" class="navbar-brand">
@@ -75,8 +72,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div
-            style="height: 105px; width: 80%" class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto">
               <a href="index.html" class="nav-item nav-link">Home</a>
               <a href="about.html" class="nav-item nav-link">About</a>
@@ -131,14 +127,14 @@
     <!-- Page Header End -->
 
     <!-- Testimonial Start -->
-    <div class="container-fluid py-5">
-      <div class="container">
+    <div class="container-fluid testimonial py-5 my-5">
+      <div class="container py-5">
         <div
           class="section-title text-center mx-auto wow fadeInUp"
           data-wow-delay="0.1s"
           style="max-width: 500px"
         >
-          <p class="fs-5 fw-medium fst-italic text-primary">Testimonial</p>
+          <p class="fs-5 fw-medium fst-italic text-white">Testimonial</p>
           <h1 class="display-6">What our clients say about our products</h1>
         </div>
         <div
@@ -147,52 +143,51 @@
         >
           <div class="testimonial-item p-4 p-lg-5">
             <p class="mb-4">
-              Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
-              ipsum et lorem et sit, sed stet lorem sit clita duo justo
+              I was starting to get discouraged by the high price of chicken at
+              the grocery store. Then I discovered AMAS Farm! Their prices are
+              incredibly reasonable, especially considering the quality you get.
             </p>
             <div class="d-flex align-items-center justify-content-center">
               <img
                 class="img-fluid flex-shrink-0"
-                src="img/testimonial-1.jpg"
+                src="Poultry/img2.png"
                 alt=""
               />
               <div class="text-start ms-3">
-                <h5>Client Name</h5>
-                <span class="text-primary">Profession</span>
+                <h5>Afia Konadu</h5>
               </div>
             </div>
           </div>
           <div class="testimonial-item p-4 p-lg-5">
             <p class="mb-4">
-              Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
-              ipsum et lorem et sit, sed stet lorem sit clita duo justo
+              The chickens are just as good, if not better, than what I find at
+              the supermarket. Now I can enjoy delicious, healthy chicken meals
+              without breaking the bank. Thank you!
             </p>
             <div class="d-flex align-items-center justify-content-center">
               <img
                 class="img-fluid flex-shrink-0"
-                src="img/testimonial-2.jpg"
+                src="Poultry/img1.png"
                 alt=""
               />
               <div class="text-start ms-3">
-                <h5>Client Name</h5>
-                <span class="text-primary">Profession</span>
+                <h5>Amoani Frempong</h5>
               </div>
             </div>
           </div>
           <div class="testimonial-item p-4 p-lg-5">
             <p class="mb-4">
-              Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
-              ipsum et lorem et sit, sed stet lorem sit clita duo justo
+              The chicken is always fresh, tender, and full of flavor. It makes
+              a huge difference in my meals.
             </p>
             <div class="d-flex align-items-center justify-content-center">
               <img
                 class="img-fluid flex-shrink-0"
-                src="img/testimonial-3.jpg"
+                src="Poultry/img3.jpg"
                 alt=""
               />
               <div class="text-start ms-3">
-                <h5>Client Name</h5>
-                <span class="text-primary">Profession</span>
+                <h5>Diana Akosua</h5>
               </div>
             </div>
           </div>
@@ -208,7 +203,7 @@
     >
       <div class="container py-5">
         <div class="row g-5">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-5 col-md-6">
             <h4 class="text-primary mb-4">Our Office</h4>
             <p class="mb-2">
               <i class="fa fa-map-marker-alt text-primary me-3"></i>PE B14/3,
