--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@
               <div class="col-sm-4">
                 <img
                   class="img-fluid bg-white w-100"
-                  src="Poultry/broilers.jpg"
+                  src="Poultry/downloadbroiler.jpeg"
                   alt=""
                 />
               </div>
