--- a/contact.html
+++ b/contact.html
@@ -215,7 +215,15 @@
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="h-100">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3969.719295057379!2d-0.1763102!3d5.7534859!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf77fc920d6d05%3A0x165539144011e4dc!2sPenfield%20Primary!5e0!3m2!1sen!2sfr!4v1711058529276!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3969.719295057379!2d-0.1763102!3d5.7534859!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf77fc920d6d05%3A0x165539144011e4dc!2sPenfield%20Primary!5e0!3m2!1sen!2sfr!4v1711058529276!5m2!1sen!2sfr"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
           </div>
         </div>
