--- a/gallery.html
+++ b/gallery.html
@@ -127,36 +127,36 @@
                 <div class="row">
                     <div class="column">
                         <div><img class="bod" src="Poultry/broiler2.jpeg">
-                            <p>One line Caption</p>
+                            <p>Our young broilers</p>
                         </div>
-                        <div><img class="bod" src="Poultry/broilers.jpg">
-                            <p>One line Caption</p></div>
+                        <div><img class="bod" src="Poultry/downloadbroiler.jpeg">
+                            <p>Healthy broilers</p></div>
                         <div><img class="bod" src="Poultry/download (1).jpg">
-                            <p>One line Caption</p>
+                            <p>Fresh and tasty chicken wings</p>
                         </div> 
                     </div>
                     <div class="column">
                         <div><img class="bod" src="Poultry/young broilers1.png">
-                            <p>One line Caption</p>
+                            <p>Young Broilers</p>
                         </div>
                         <div><img class="bod" src="Poultry/white layers2.jpg">
-                            <p>One line Caption</p>
+                            <p>All looking healthy layers</p>
                         </div>
                         <div><img class="bod" src="Poultry/gizzard.jpg">
-                            <p>One line Caption</p>
+                            <p>Our well prepared chiken giblets</p>
                         </div>
                         <div><img class="bod" src="Poultry/eggs2.jpg">
-                            <p>One line Caption</p>
+                            <p>Our Fresh Eggs</p>
                         </div>  
                     </div>
                     <div class="column">
                         <div><img class="bod" src="Poultry/day old.jpg">
-                            <p>One line Caption</p>
+                            <p>Our big day old chicks</p>
                         </div>
                         <div><img class="bod" src="Poultry/old day2.jpeg"></div>
-                        <p>One line Caption</p>
+                        <p>Day old chicks</p>
                         <div><img class="bod" src="Poultry/white layers.jpg">
-                        <p>One line Caption</p></div>   
+                        <p>Our healhy looking layers </p></div>   
                     </div>
                 </div>
              </div>
