--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <!-- About Start -->
     <div class="container-xxl py-5">
       <div class="container">
-        <div class="row g-5">
+        <div class="row g-6">
           <div class="col-lg-6">
             <div class="row g-3">
               <div class="col-6 text-end">
@@ -238,7 +238,7 @@
               <div class="col-sm-4">
                 <img
                   class="img-fluid bg-white w-100"
-                  src="Poultry/broilers.jpg"
+                  src="Poultry/downloadbroiler.jpeg"
                   alt=""
                 />
               </div>
@@ -265,7 +265,7 @@
           data-wow-delay="0.5s"
         >
           <a href="" class="d-block product-item rounded">
-            <img src="Poultry/broilers.jpg" alt="" />
+            <img src="Poultry/downloadbroiler.jpeg" alt="" />
             <div
               class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4"
             >
@@ -326,12 +326,10 @@
             <div class="section-title">
               <h1 class="fw-black" class="display-6">Our Gallery Show </h1>
             </div><p class="mb-4">
-                  There's a common perception that older laying hens (sometimes
-                  called "spent hens" or "soup hens") are healthier than their
-                  younger counterparts.
+                  Do you want to see more of our poultry products?
                 </p>
                 <p class="mb-4">
-                  Check out our gallery for more pictures
+                  Please do check out our gallery for more pictures
                 </p>
                 <a
               href="gallery.html"
