--- a/product.html
+++ b/product.html
@@ -129,7 +129,7 @@
           data-wow-delay="0.5s"
         >
           <a href="" class="d-block product-item rounded">
-            <img src="Poultry/broilers.jpg" alt="" />
+            <img src="Poultry/downloadbroiler.jpeg" alt="" />
             <div
               class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4"
             >
